Filter gap fixed

--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,5 @@
 .label {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
 }
